# capital-gains

./: CHANGELOG.md  Cargo.toml  Dockerfile.local  Dockerfile.test  Makefile  OTHER_PROJECTS.md  README.md  build.rs  cliff.toml  dprint.json
.github/workflows/: ci.yml  release.yml
benches/: results.md
dev/: comments-tidy.sh  doc-other-projects.sh  doc-readme.sh  docker-build-local.sh  docker-build-test.sh  makefile-descriptions.sh  rs-bench.sh  valgrind-test.sh
src/: main.rs
src/data/: cli-expected-all.jsonl  expected-000001.json  expected-000002.json  expected-000003.json  expected-000005.json  expected-000008.json  expected-10.json  expected-6.json  expected-7.json  expected-9.json  input-000001.json  input-000002.json  input-000009.json  input-10.json  input-3.json  input-4.json  input-5.json  input-6.json  input-7.json  input-8.json
tests/: valgrind.txt
