[package]
name = "capital-gains"
version = "0.3.0"
authors = ["Rodolfo Mói de Oliveira <rodmoi.oliveira@gmail.com>"]
build = "build.rs"
documentation = "https://github.com/rodmoioliveira/capital-gains"
edition = "2021"
homepage = "https://github.com/rodmoioliveira/capital-gains"
license = "Unlicense OR MIT"
readme = "README.md"
repository = "https://github.com/rodmoioliveira/capital-gains"
description = """
capital-gains is a CLI to calculate the tax to be paid on profits or losses from
operations in the stock financial market."""

[[bin]]
name = "capital-gains"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env", "cargo", "help"] }
grep-cli = "0.1.11"
libc = "0.2.172"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[build-dependencies]
chrono = "0.4.41"
